Fix page spacing

--- a/app/static/css/download.css
+++ b/app/static/css/download.css
@@ -6,6 +6,12 @@
     --download-button-color: #e9cedf;
 }
 
+.page {
+    display: flex;
+    justify-self: center;
+    flex-wrap: wrap;
+}
+
 .heading {
     margin-bottom: 16px;
     margin-left: 10px;
@@ -16,16 +22,12 @@
     color: var(--header);
     font-weight: normal;
     font-size: 130%;
+    margin-bottom: 2.5px;
 }
 
 .bottom-text {
     margin-top: 20px;
     margin-left: 10px;
-}
-
-.client-container {
-    display: flex;
-    justify-items: space-evenly;
 }
 
 .client {
@@ -36,14 +38,16 @@
     display: inline-block;
     max-width: 355.55px;
     background-color: #ece1e8;
-    margin: 10px 20px 10px 20px;
+    margin: 10px;
     filter: drop-shadow(1px 2px 1px #c6c6ca);
+    /* Looks kinda cool? */
+    /* text-align: center; */
 }
 
 .client img {
     height: 200px;
     margin-top: 8px;
-    border-radius: 2px 2px 2px 2px;
+    border-radius: 2px;
 }
 
 .client a {
@@ -52,7 +56,7 @@
     padding: 10px;
     color: var(--download-button-text);
     background-color: var(--download-button-color);
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 5px;
     text-align: center;
     text-decoration: none;
     font-size: 1.2em;
